<resources>

    <string-array name="status_array">
        <item>In Process</item>
        <item>Resolved</item>
    </string-array>

    <string-array name="all_status_array">
        <item>All</item>
        <item>In Process</item>
        <item>Resolved</item>
    </string-array>

    <string-array name="ls_all_status_array">
        <item>All</item>
        <item>In Process</item>
        <item>Pending</item>
        <item>Resolved</item>
    </string-array>

    <string-array name="calender_type">
        <item>Date</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>

    <string name="app_name">Fesco</string>
    <string name="email_hint">example@gmail.com</string>
    <string name="search">Search...</string>
    <string name="login">Login</string>
    <string name="sign_in"> Sign In</string>
    <string name="complaint_feedback">Complaint feedback</string>
    <string name="sign_up"> Sign Up</string>
    <string name="signup">Sign-up</string>
    <string name="user_login">User Login</string>
    <string name="user_signup">User Sign-up</string>
    <string name="sdo_hint">Sub Divisional Officer Login</string>
    <string name="xen_hint">Executive Engineer Login</string>
    <string name="ls_hint">Line Superintendent Login</string>
    <string name="lm_hint">Lineman Login</string>
    <string name="enter_details">Please enter your details</string>
    <string name="password_hint">enter atleast 6 words</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="consumer_id">Consumer ID</string>
    <string name="name">Name</string>
    <string name="city">City</string>
    <string name="consumer_no">Consumer ID</string>
    <string name="have_account">Have an Account ?</string>
    <string name="dont_have_account">Don\'t have an Account ?</string>
    <string name="phone_no">Phone No</string>
    <string name="address">Address</string>
    <string name="status">Complaint Status</string>
    <string name="ls">LS</string>
    <string name="sdo">SDO</string>
    <string name="feedback">User Feedback</string>
    <string name="date_time">Complaint DateTime</string>
    <string name="complaint_type">Complaint Type</string>
    <string name="assign_lm">Assign To LM</string>
    <string name="complaint_type_hint">Select complaint type</string>
    <string name="update">Update</string>
    <string name="status_update">Update the status</string>
    <string name="assign_to_lm">Assign complaint to LM</string>
    <string name="submit_complaint">Submit Complaint</string>
    <string name="current_password_hint">Current Password</string>
    <string name="new_password_hint">New Password</string>
    <string name="change_password">change your password</string>
    <string name="division">Division</string>
    <string name="sub_division">Sub Division</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="consumer_no_hint">enter your consumer ID</string>
    <string name="name_hint">enter your full name</string>
    <string name="address_hint">enter your address</string>
    <string name="phone_no_hint">enter your phone number</string>
    <string name="logout_message">Are you sure you want to Logout ?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_resolved">Not Resolved</string>
    <string name="unresolved_complains">Unresolved Complaints</string>
    <string name="resolved_complains">Resolved Complaints</string>
    <string name="analytics">Analytics</string>
    <string name="lm">LM</string>
    <string name="select_lm">Select LM</string>
    <string name="select_complaint_status">Select Complaint Status</string>
    <string name="select_date">Select Date</string>
    <string name="select_calender_type">Select Calender Type and Select Date</string>
    <string name="date">Date</string>
    <string name="see_analytics">See Analytics</string>
    <string name="select_ls">Select LS</string>
    <string name="unresolved_complaints">Unresolved Complaints</string>
    <string name="resolved_complaints">Resolved Complaints</string>
    <string name="select_sdo">Select SDO</string>
</resources>