<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/lsUnResolvedComplaints"
        android:icon="@drawable/pending"
        android:title="@string/unresolved_complains"
        android:enabled="true"
        />

    <item
        android:id="@+id/lsResolvedComplaints"
        android:icon="@drawable/solved"
        android:enabled="true"
        android:title="@string/resolved_complains" />

    <item
        android:id="@+id/lm"
        android:icon="@drawable/baseline_supervised_user_circle_24"
        android:enabled="true"
        android:title="@string/lm" />
    <item
        android:id="@+id/analytics"
        android:enabled="true"
        android:icon="@drawable/analytics"
        android:title="@string/analytics" />
</menu>