<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp"
        tools:ignore="ScrollViewSize">


        <TextView
            android:id="@+id/txt_alertify_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/user_signup"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_alertify_user"
            android:layout_marginStart="20dp"
            android:text="@string/enter_details"
            android:textColor="@color/hint_color"
            android:textSize="12sp" />


        <!--        start of consumer-no field-->

        <TextView
            android:id="@+id/consumerNoHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_detail"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/consumer_no"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/consumerNoLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/consumerNoHeading"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:hintEnabled="false"
            app:hintTextColor="@color/hint_color"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/consumerNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_txt_bg"
                android:hint="@string/consumer_no_hint"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <!--        end of consumer-no field-->

        <!--        start of name-no field-->

        <TextView
            android:id="@+id/nameHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/consumerNoLayout"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/nameHeading"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:hintEnabled="false"
            app:hintTextColor="@color/hint_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_txt_bg"
                android:hint="@string/name_hint"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <!--        end of name-no field-->


        <!--        start of phone-no field-->

        <TextView
            android:id="@+id/phoneNoHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nameLayout"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/phone_no"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneNoLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/phoneNoHeading"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:hintEnabled="false"
            app:hintTextColor="@color/hint_color"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_txt_bg"
                android:hint="@string/phone_no_hint"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <!--        end of phone-no field-->

        <!--        start of address-no field-->

        <TextView
            android:id="@+id/addressHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phoneNoLayout"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/address"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addressLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/addressHeading"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:hintEnabled="false"
            app:hintTextColor="@color/hint_color"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_txt_bg"
                android:hint="@string/address_hint"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <!--        end of address-no field-->


        <!--        start of password field-->

        <TextView
            android:id="@+id/password_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addressLayout"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/password_heading"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/hint_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_txt_bg"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        end of password field-->

        <!--        start of sign-up button-->

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_below="@id/passwordLayout"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/app_color"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="6dp" />

        <!--        end of sign-up button-->


        <!--        start of have an account layout-->

        <RelativeLayout
            android:id="@+id/haveAccountLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signUpBtn"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center">

            <TextView
                android:id="@+id/have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_account"
                android:textColor="@color/hint_color" />

            <TextView
                android:id="@+id/signInTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/have_account"
                android:text="@string/sign_in"
                android:textColor="@color/app_color" />
        </RelativeLayout>

        <!--        end of have an account layout -->

    </RelativeLayout>
</ScrollView>