<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <!-- Root layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp"
        tools:ignore="ScrollViewSize">

        <!-- TextView for Alertify User -->
        <TextView
            android:id="@+id/txt_alertify_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/lm_hint"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <!-- TextView for Detail -->
        <TextView
            android:id="@+id/txt_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_alertify_user"
            android:layout_marginStart="20dp"
            android:text="@string/enter_details"
            android:textColor="@color/hint_color"
            android:textSize="12sp" />

        <!-- Email Field Heading -->
        <TextView
            android:id="@+id/email_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_detail"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <!-- TextInputLayout for Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/email_heading"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:hintEnabled="false"
            app:hintTextColor="@color/hint_color">

            <!-- TextInputEditText for Email -->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_txt_bg"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Field Heading -->
        <TextView
            android:id="@+id/password_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_layout"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <!-- TextInputLayout for Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/password_heading"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/hint_color">

            <!-- TextInputEditText for Password -->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_txt_bg"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Login Button -->
        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_below="@id/passwordLayout"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/app_color"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="6dp" />

    </RelativeLayout>
</ScrollView>
